Updated blockly, removed extra braces when loading xml

--- a/blockly-android/src/main/assets/blockly/webview.html
+++ b/blockly-android/src/main/assets/blockly/webview.html
@@ -23,7 +23,15 @@
     var workspace = Blockly.inject('blocklyDiv', {
       toolbox: toolboxes['level' + initialLevel].xml,
       media: './media/',
-      sounds: false
+      renderer: 'zelos',
+      sounds: false,
+      zoom:
+         {controls: false,
+          wheel: true,
+          startScale: 0.9,
+          maxScale: 3,
+          minScale: 0.3,
+          scaleSpeed: 1.2}
     });
 
     var METHOD_SIGNATURE = {
