--- a/blockly-android/src/main/assets/blockly/webview.html
+++ b/blockly-android/src/main/assets/blockly/webview.html
@@ -28,7 +28,7 @@
       zoom:
          {controls: false,
           wheel: true,
-          startScale: 0.9,
+          startScale: 0.7,
           maxScale: 3,
           minScale: 0.3,
           scaleSpeed: 1.2}
@@ -51,7 +51,8 @@
       'block_bumper'
     ]
 
-    var iOSBlocklyBrowser = window.navigator.userAgent === 'iOS-Blockly';
+    var iosUserAgents = [ 'iPhone', 'iPad', 'iPod' ];
+    var iOSBlocklyBrowser = iosUserAgents.indexOf(window.navigator.userAgent) !== -1;
 
     function getNameInputValues() {
       return NAME_INPUT_BLOCK_TYPES
